// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lexer Tokens are generated correctly 1`] = `
Array [
  Object {
    "TAG": 0,
    "_0": 0,
    "_1": "
",
  },
  Object {
    "TAG": 14,
    "_0": 4,
    "_1": "Abc",
  },
  Object {
    "TAG": 18,
    "_0": 8,
    "_1": "d",
  },
  Object {
    "TAG": 18,
    "_0": 10,
    "_1": "e",
  },
  Object {
    "TAG": 17,
    "_0": 11,
  },
  Object {
    "TAG": 16,
    "_0": 12,
  },
  Object {
    "TAG": 0,
    "_0": 15,
    "_1": " ",
  },
  Object {
    "TAG": 22,
    "_0": 18,
  },
  Object {
    "TAG": 2,
    "_0": 19,
    "_1": "f",
  },
  Object {
    "TAG": 0,
    "_0": 25,
    "_1": " ",
  },
  Object {
    "TAG": 15,
    "_0": 28,
  },
  Object {
    "TAG": 16,
    "_0": 29,
  },
  Object {
    "TAG": 15,
    "_0": 31,
  },
  Object {
    "TAG": 0,
    "_0": 34,
    "_1": "
",
  },
  Object {
    "TAG": 18,
    "_0": 38,
    "_1": "match",
  },
  Object {
    "TAG": 18,
    "_0": 44,
    "_1": "g",
  },
  Object {
    "TAG": 18,
    "_0": 46,
    "_1": "with",
  },
  Object {
    "TAG": 11,
    "_0": 51,
  },
  Object {
    "TAG": 18,
    "_0": 52,
    "_1": "h",
  },
  Object {
    "TAG": 8,
    "_0": 53,
  },
  Object {
    "TAG": 4,
    "_0": 55,
  },
  Object {
    "TAG": 7,
    "_0": 59,
  },
  Object {
    "TAG": 18,
    "_0": 61,
    "_1": "i",
  },
  Object {
    "TAG": 8,
    "_0": 62,
  },
  Object {
    "TAG": 9,
    "_0": 64,
  },
  Object {
    "TAG": 2,
    "_0": 65,
    "_1": "j",
  },
  Object {
    "TAG": 10,
    "_0": 68,
  },
  Object {
    "TAG": 7,
    "_0": 69,
  },
  Object {
    "TAG": 18,
    "_0": 71,
    "_1": "k",
  },
  Object {
    "TAG": 12,
    "_0": 72,
  },
  Object {
    "TAG": 0,
    "_0": 76,
    "_1": "
  ",
  },
  Object {
    "TAG": 22,
    "_0": 81,
  },
  Object {
    "TAG": 18,
    "_0": 82,
    "_1": "k",
  },
  Object {
    "TAG": 0,
    "_0": 86,
    "_1": "
",
  },
  Object {
    "TAG": 18,
    "_0": 90,
    "_1": "with",
  },
  Object {
    "TAG": 11,
    "_0": 95,
  },
  Object {
    "TAG": 18,
    "_0": 96,
    "_1": "h",
  },
  Object {
    "TAG": 8,
    "_0": 97,
  },
  Object {
    "TAG": 5,
    "_0": 99,
  },
  Object {
    "TAG": 7,
    "_0": 104,
  },
  Object {
    "TAG": 18,
    "_0": 106,
    "_1": "l",
  },
  Object {
    "TAG": 8,
    "_0": 107,
  },
  Object {
    "TAG": 9,
    "_0": 109,
  },
  Object {
    "TAG": 2,
    "_0": 110,
    "_1": "m",
  },
  Object {
    "TAG": 7,
    "_0": 113,
  },
  Object {
    "TAG": 13,
    "_0": 115,
  },
  Object {
    "TAG": 18,
    "_0": 118,
    "_1": "rest",
  },
  Object {
    "TAG": 10,
    "_0": 122,
  },
  Object {
    "TAG": 12,
    "_0": 123,
  },
  Object {
    "TAG": 0,
    "_0": 127,
    "_1": "
  ",
  },
  Object {
    "TAG": 19,
    "_0": 132,
  },
  Object {
    "TAG": 18,
    "_0": 134,
    "_1": "map",
  },
  Object {
    "TAG": 18,
    "_0": 138,
    "_1": "rest",
  },
  Object {
    "TAG": 18,
    "_0": 149,
    "_1": "with",
  },
  Object {
    "TAG": 11,
    "_0": 154,
  },
  Object {
    "TAG": 18,
    "_0": 155,
    "_1": "n",
  },
  Object {
    "TAG": 7,
    "_0": 156,
  },
  Object {
    "TAG": 18,
    "_0": 158,
    "_1": "o",
  },
  Object {
    "TAG": 12,
    "_0": 159,
  },
  Object {
    "TAG": 7,
    "_0": 160,
  },
  Object {
    "TAG": 3,
    "_0": 162,
    "_1": 0,
  },
  Object {
    "TAG": 19,
    "_0": 164,
  },
  Object {
    "TAG": 0,
    "_0": 167,
    "_1": "
    First ",
  },
  Object {
    "TAG": 22,
    "_0": 180,
  },
  Object {
    "TAG": 18,
    "_0": 181,
    "_1": "n",
  },
  Object {
    "TAG": 0,
    "_0": 185,
    "_1": " ",
  },
  Object {
    "TAG": 22,
    "_0": 188,
  },
  Object {
    "TAG": 18,
    "_0": 189,
    "_1": "o",
  },
  Object {
    "TAG": 0,
    "_0": 193,
    "_1": "
    ",
  },
  Object {
    "TAG": 18,
    "_0": 201,
    "_1": "with",
  },
  Object {
    "TAG": 11,
    "_0": 206,
  },
  Object {
    "TAG": 18,
    "_0": 207,
    "_1": "n",
  },
  Object {
    "TAG": 7,
    "_0": 208,
  },
  Object {
    "TAG": 18,
    "_0": 210,
    "_1": "o",
  },
  Object {
    "TAG": 12,
    "_0": 211,
  },
  Object {
    "TAG": 7,
    "_0": 212,
  },
  Object {
    "TAG": 18,
    "_0": 214,
    "_1": "index",
  },
  Object {
    "TAG": 0,
    "_0": 222,
    "_1": "
    ",
  },
  Object {
    "TAG": 22,
    "_0": 229,
  },
  Object {
    "TAG": 18,
    "_0": 230,
    "_1": "index",
  },
  Object {
    "TAG": 0,
    "_0": 238,
    "_1": " ",
  },
  Object {
    "TAG": 22,
    "_0": 241,
  },
  Object {
    "TAG": 18,
    "_0": 242,
    "_1": "n",
  },
  Object {
    "TAG": 0,
    "_0": 246,
    "_1": " ",
  },
  Object {
    "TAG": 22,
    "_0": 249,
  },
  Object {
    "TAG": 18,
    "_0": 250,
    "_1": "o",
  },
  Object {
    "TAG": 0,
    "_0": 254,
    "_1": "
  ",
  },
  Object {
    "TAG": 19,
    "_0": 259,
  },
  Object {
    "TAG": 15,
    "_0": 261,
  },
  Object {
    "TAG": 18,
    "_0": 262,
    "_1": "map",
  },
  Object {
    "TAG": 19,
    "_0": 266,
  },
  Object {
    "TAG": 0,
    "_0": 269,
    "_1": "
",
  },
  Object {
    "TAG": 15,
    "_0": 273,
  },
  Object {
    "TAG": 18,
    "_0": 274,
    "_1": "match",
  },
  Object {
    "TAG": 0,
    "_0": 282,
    "_1": "
",
  },
  Object {
    "TAG": 19,
    "_0": 285,
  },
  Object {
    "TAG": 22,
    "_0": 285,
  },
  Object {
    "TAG": 3,
    "_0": 287,
    "_1": -1.5,
  },
  Object {
    "TAG": 19,
    "_0": 292,
  },
  Object {
    "TAG": 0,
    "_0": 295,
    "_1": "
{ p %
",
  },
  Object {
    "TAG": 1,
    "_0": 304,
    "_1": " \\" \\\\ ",
  },
  Object {
    "TAG": 0,
    "_0": 311,
    "_1": "
",
  },
  Object {
    "TAG": 1,
    "_0": 314,
    "_1": " nested {* comment *} ",
  },
  Object {
    "TAG": 0,
    "_0": 338,
    "_1": "
",
  },
  Object {
    "TAG": 22,
    "_0": 341,
  },
  Object {
    "TAG": 2,
    "_0": 342,
    "_1": " \\\\ ",
  },
  Object {
    "TAG": 0,
    "_0": 350,
    "_1": "
",
  },
  Object {
    "TAG": 22,
    "_0": 353,
  },
  Object {
    "TAG": 2,
    "_0": 354,
    "_1": " \\" ",
  },
  Object {
    "TAG": 0,
    "_0": 363,
    "_1": "
",
  },
  Object {
    "TAG": 22,
    "_0": 366,
  },
  Object {
    "TAG": 18,
    "_0": 369,
    "_1": "a",
  },
  Object {
    "TAG": 0,
    "_0": 373,
    "_1": "
",
  },
  Object {
    "TAG": 1,
    "_0": 376,
    "_1": " {q*r ",
  },
  Object {
    "TAG": 0,
    "_0": 384,
    "_1": "
",
  },
  Object {
    "TAG": 22,
    "_0": 387,
  },
  Object {
    "TAG": 14,
    "_0": 388,
    "_1": "S",
  },
  Object {
    "TAG": 0,
    "_0": 392,
    "_1": "",
  },
  Object {
    "TAG": 23,
    "_0": 392,
  },
]
`;

exports[`Parser Components 1`] = `
Array [
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 3,
  },
  Object {
    "TAG": 4,
    "children": Array [
      Array [
        "G",
        Object {
          "TAG": 1,
          "_0": Array [
            Object {
              "TAG": 0,
              "_0": "
     h ",
              "_1": 3,
            },
            Object {
              "TAG": 1,
              "_0": 55,
              "_1": Object {
                "_0": Object {
                  "TAG": 0,
                  "_0": 56,
                  "_1": "i",
                  "_2": 1,
                },
                "_1": Array [],
              },
            },
            Object {
              "TAG": 0,
              "_0": " ",
              "_1": 3,
            },
            Object {
              "TAG": 0,
              "_0": "
   ",
              "_1": 3,
            },
          ],
        },
      ],
      Array [
        "Children",
        Object {
          "TAG": 1,
          "_0": Array [
            Object {
              "TAG": 0,
              "_0": "
   k
   ",
              "_1": 3,
            },
            Object {
              "TAG": 4,
              "children": Array [],
              "f": undefined,
              "loc": 94,
              "name": "L",
              "props": Array [
                Array [
                  "m",
                  Object {
                    "NAME": "Object",
                    "VAL": Array [
                      98,
                      Array [
                        Array [
                          "n",
                          Object {
                            "NAME": "Binding",
                            "VAL": Array [
                              102,
                              "o",
                            ],
                          },
                        ],
                        Array [
                          "p",
                          Object {
                            "NAME": "Array",
                            "VAL": Array [
                              108,
                              Array [
                                Object {
                                  "NAME": "Binding",
                                  "VAL": Array [
                                    109,
                                    "q",
                                  ],
                                },
                              ],
                            ],
                          },
                        ],
                        Array [
                          "r",
                          Object {
                            "NAME": "Binding",
                            "VAL": Array [
                              113,
                              "r",
                            ],
                          },
                        ],
                      ],
                    ],
                  },
                ],
              ],
            },
            Object {
              "TAG": 0,
              "_0": "
",
              "_1": 3,
            },
          ],
        },
      ],
    ],
    "f": undefined,
    "loc": 4,
    "name": "A",
    "props": Array [
      Array [
        "b",
        Object {
          "NAME": "Binding",
          "VAL": Array [
            9,
            "b",
          ],
        },
      ],
      Array [
        "c",
        Object {
          "NAME": "Number",
          "VAL": Array [
            16,
            1,
          ],
        },
      ],
      Array [
        "d",
        Object {
          "NAME": "String",
          "VAL": Array [
            23,
            "e",
          ],
        },
      ],
      Array [
        "f",
        Object {
          "NAME": "True",
          "VAL": 32,
        },
      ],
    ],
  },
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 3,
  },
]
`;

exports[`Parser Mapping 1`] = `
Array [
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 3,
  },
  Object {
    "TAG": 3,
    "_0": 4,
    "_1": Object {
      "NAME": "Binding",
      "VAL": Array [
        8,
        "a",
      ],
    },
    "_2": Object {
      "_0": Object {
        "ast": Array [
          Object {
            "TAG": 0,
            "_0": "
  ",
            "_1": 3,
          },
          Object {
            "TAG": 1,
            "_0": 26,
            "_1": Object {
              "_0": Object {
                "TAG": 0,
                "_0": 27,
                "_1": "b",
                "_2": 1,
              },
              "_1": Array [],
            },
          },
          Object {
            "TAG": 0,
            "_0": "
",
            "_1": 3,
          },
        ],
        "patterns": Object {
          "_0": Object {
            "_0": Object {
              "NAME": "Object",
              "VAL": Array [
                15,
                Array [
                  Array [
                    "b",
                    Object {
                      "NAME": "Binding",
                      "VAL": Array [
                        16,
                        "b",
                      ],
                    },
                  ],
                ],
              ],
            },
            "_1": Array [],
          },
          "_1": Array [],
        },
      },
      "_1": Array [],
    },
  },
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 3,
  },
  Object {
    "TAG": 3,
    "_0": 46,
    "_1": Object {
      "NAME": "Binding",
      "VAL": Array [
        50,
        "c",
      ],
    },
    "_2": Object {
      "_0": Object {
        "ast": Array [
          Object {
            "TAG": 0,
            "_0": "
  ",
            "_1": 3,
          },
          Object {
            "TAG": 1,
            "_0": 80,
            "_1": Object {
              "_0": Object {
                "TAG": 0,
                "_0": 81,
                "_1": "e",
                "_2": 1,
              },
              "_1": Array [],
            },
          },
          Object {
            "TAG": 0,
            "_0": "
",
            "_1": 3,
          },
        ],
        "patterns": Object {
          "_0": Object {
            "_0": Object {
              "NAME": "Object",
              "VAL": Array [
                60,
                Array [
                  Array [
                    "d",
                    Object {
                      "NAME": "True",
                      "VAL": 64,
                    },
                  ],
                  Array [
                    "e",
                    Object {
                      "NAME": "Binding",
                      "VAL": Array [
                        70,
                        "e",
                      ],
                    },
                  ],
                ],
              ],
            },
            "_1": Array [],
          },
          "_1": Array [],
        },
      },
      "_1": Array [
        Object {
          "ast": Array [
            Object {
              "TAG": 0,
              "_0": "
  ",
              "_1": 3,
            },
            Object {
              "TAG": 1,
              "_0": 115,
              "_1": Object {
                "_0": Object {
                  "TAG": 0,
                  "_0": 116,
                  "_1": "f",
                  "_2": 1,
                },
                "_1": Array [],
              },
            },
            Object {
              "TAG": 0,
              "_0": "
",
              "_1": 3,
            },
          ],
          "patterns": Object {
            "_0": Object {
              "_0": Object {
                "NAME": "Object",
                "VAL": Array [
                  94,
                  Array [
                    Array [
                      "d",
                      Object {
                        "NAME": "False",
                        "VAL": 98,
                      },
                    ],
                    Array [
                      "f",
                      Object {
                        "NAME": "Binding",
                        "VAL": Array [
                          105,
                          "f",
                        ],
                      },
                    ],
                  ],
                ],
              },
              "_1": Array [],
            },
            "_1": Array [],
          },
        },
      ],
    },
  },
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 3,
  },
  Object {
    "TAG": 3,
    "_0": 135,
    "_1": Object {
      "NAME": "Binding",
      "VAL": Array [
        139,
        "g",
      ],
    },
    "_2": Object {
      "_0": Object {
        "ast": Array [
          Object {
            "TAG": 0,
            "_0": "
  ",
            "_1": 3,
          },
          Object {
            "TAG": 1,
            "_0": 164,
            "_1": Object {
              "_0": Object {
                "TAG": 0,
                "_0": 165,
                "_1": "index",
                "_2": 1,
              },
              "_1": Array [],
            },
          },
          Object {
            "TAG": 0,
            "_0": " ",
            "_1": 3,
          },
          Object {
            "TAG": 1,
            "_0": 176,
            "_1": Object {
              "_0": Object {
                "TAG": 0,
                "_0": 177,
                "_1": "g",
                "_2": 1,
              },
              "_1": Array [],
            },
          },
          Object {
            "TAG": 0,
            "_0": "
",
            "_1": 3,
          },
        ],
        "patterns": Object {
          "_0": Object {
            "_0": Object {
              "NAME": "Object",
              "VAL": Array [
                146,
                Array [
                  Array [
                    "h",
                    Object {
                      "NAME": "Binding",
                      "VAL": Array [
                        147,
                        "h",
                      ],
                    },
                  ],
                ],
              ],
            },
            "_1": Array [
              Object {
                "NAME": "Binding",
                "VAL": Array [
                  151,
                  "index",
                ],
              },
            ],
          },
          "_1": Array [],
        },
      },
      "_1": Array [],
    },
  },
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 3,
  },
]
`;

exports[`Parser Matching 1`] = `
Array [
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 3,
  },
  Object {
    "TAG": 2,
    "_0": 4,
    "_1": Object {
      "_0": Array [
        10,
        "a",
      ],
      "_1": Array [],
    },
    "_2": Object {
      "_0": Object {
        "ast": Array [
          Object {
            "TAG": 0,
            "_0": "
  b
",
            "_1": 3,
          },
        ],
        "patterns": Object {
          "_0": Object {
            "_0": Object {
              "NAME": "Number",
              "VAL": Array [
                20,
                1,
              ],
            },
            "_1": Array [],
          },
          "_1": Array [],
        },
      },
      "_1": Array [
        Object {
          "ast": Array [
            Object {
              "TAG": 0,
              "_0": "
  c
",
              "_1": 3,
            },
          ],
          "patterns": Object {
            "_0": Object {
              "_0": Object {
                "NAME": "Number",
                "VAL": Array [
                  37,
                  2,
                ],
              },
              "_1": Array [],
            },
            "_1": Array [
              Object {
                "_0": Object {
                  "NAME": "Number",
                  "VAL": Array [
                    47,
                    3,
                  ],
                },
                "_1": Array [],
              },
            ],
          },
        },
        Object {
          "ast": Array [
            Object {
              "TAG": 0,
              "_0": "
  d
",
              "_1": 3,
            },
          ],
          "patterns": Object {
            "_0": Object {
              "_0": Object {
                "NAME": "Number",
                "VAL": Array [
                  64,
                  4,
                ],
              },
              "_1": Array [],
            },
            "_1": Array [],
          },
        },
      ],
    },
  },
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 3,
  },
  Object {
    "TAG": 2,
    "_0": 89,
    "_1": Object {
      "_0": Array [
        95,
        "e",
      ],
      "_1": Array [
        Array [
          98,
          "f",
        ],
      ],
    },
    "_2": Object {
      "_0": Object {
        "ast": Array [
          Object {
            "TAG": 0,
            "_0": "
  ",
            "_1": 3,
          },
          Object {
            "TAG": 1,
            "_0": 125,
            "_1": Object {
              "_0": Object {
                "TAG": 0,
                "_0": 126,
                "_1": "g",
                "_2": 1,
              },
              "_1": Array [],
            },
          },
          Object {
            "TAG": 0,
            "_0": "
",
            "_1": 3,
          },
        ],
        "patterns": Object {
          "_0": Object {
            "_0": Object {
              "NAME": "True",
              "VAL": 108,
            },
            "_1": Array [
              Object {
                "NAME": "Object",
                "VAL": Array [
                  114,
                  Array [
                    Array [
                      "g",
                      Object {
                        "NAME": "Binding",
                        "VAL": Array [
                          115,
                          "g",
                        ],
                      },
                    ],
                  ],
                ],
              },
            ],
          },
          "_1": Array [],
        },
      },
      "_1": Array [
        Object {
          "ast": Array [
            Object {
              "TAG": 0,
              "_0": "
  h
",
              "_1": 3,
            },
          ],
          "patterns": Object {
            "_0": Object {
              "_0": Object {
                "NAME": "False",
                "VAL": 139,
              },
              "_1": Array [
                Object {
                  "NAME": "Binding",
                  "VAL": Array [
                    146,
                    "_",
                  ],
                },
              ],
            },
            "_1": Array [],
          },
        },
      ],
    },
  },
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 3,
  },
]
`;
